# pathforge

./: API_REFERENCE.md  Cargo.toml  LICENSE-MIT  README.md
benches/: astar_bench.rs  comparison.rs
examples/: basic_grid.rs  flowfield_demo.rs  frame_budget.rs  hpa_demo.rs  many_agents.rs  navmesh_test.rs  path_cache.rs
src/: budget.rs  cache.rs  heuristics.rs  lib.rs  smoothing.rs  traits.rs
src/algorithms/: astar.rs  flowfield.rs  funnel.rs  jps.rs  mod.rs  parallel.rs  replanning.rs  theta.rs
src/graphs/: grid2d.rs  grid3d.rs  hierarchical.rs  mod.rs  navmesh.rs
tests/: correctness.rs  theta_test.rs
