[package]
name = "pathforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "astar_bench"
harness = false

[[bench]]
name = "comparison"
harness = false
